Termine las publicaciones

--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
 
 <article id="publicaciones">
 <h2>Últimas Publicaciones</h2>
-<h3>Titulo de la Publicación 1</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
-<h3>Titulo de la Publicación 2</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+<h3>Al fin sobre ruedas</h3>
+<p>Miercoles 3 de abirl. Al fin mi equipo se puso las pilas con la investigación</p>
+
+<h3>Decisiones</h3>
+<p>Mas de 1h decidiendo entre pollito a la brasa o chifa</p>
+
+<h3>Programación junto con la ppl</h3>
+<p>hoy se termino el sistema de cambio de lenguajes del proyecto</p>
+
+<h3>3era semana de clase</h3>
+<p>Es la tercera semana de clase y ya me quiero morir :u</p>
+
+<h3>Esta publicación es solo un filler</h3>
+<p>Esta publicación es solo un filler no lo lea por su propia seguridad o si no habra perdido 5 segudos de su vida.</p>
 </article>
 
 <article id="contacto">
